- FIX loading the original app config.yaml in IndexBE - ADD multiple languages to Localize - ADD search to Localize - ADD built-in "align" to slTable - ADD multiple HTML5 types support to HTMLForm - ADD HTMLFormValidate::getErrorList - ADD array support to startsWith - ADD stored counter to Collection

--- a/CSS/trivial.less
+++ b/CSS/trivial.less
@@ -41,3 +41,11 @@ a:not([href]):hover {
     transition: all 0.5s;
     /*border: solid 1px silver;*/
 }
+
+.crossed {
+    text-decoration: line-through;
+}
+
+.small {
+    font-size: small;
+}
